small edits to ch2 of CS WP

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -71,7 +71,7 @@ Aggregate abundance-based LRPs are based on the SMU-level abundance at which the
  
 We consider two types of aggregate abundance-based LRPs in our case studies: logistic regression-based LRPs and projection-based LRPs. Logistic regression LRPs are estimated using historical data, representing conditions that have been previously experienced by a SMU and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios. Thus projection-based LRPs overcome one key short-coming of the logistic regression-based LRP that historical conditions might not represent current (or future) conditions, by allowing the user to specify model structure and parameter estimates and their uncertainties that reflect the best-available science on current (or future) dynamics.
 
-Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the multidimensional approach used by the Salmon Scanner. While in theory, estimates of CU status used in the aggregate abundance-based methods could be derived from the Salmon Scanner, we found little evidence of a statistical relationship between between Salmon Scanner statuses for CUs and aggregate spawner abundances for the one case study where we considered this approach, Interior Fraser River Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., S\textsubscript{gen}) rather than the Salmon Scanner to develop aggregate abundance-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser River Coho case study section of this paper. 
+Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the multidimensional approach used by the Salmon Scanner. While in theory, estimates of CU status used in the aggregate abundance-based methods could be derived from the Salmon Scanner, we found little evidence of a statistical relationship between between Salmon Scanner statuses for CUs and aggregate spawner abundances for the one case study where we considered this approach, Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., S\textsubscript{gen}) rather than the Salmon Scanner to develop aggregate abundance-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
 
 
 In addition, we characterize annual CU status using raw annual spawner abundances instead of generational averages when estimating aggregate abundance-based LRPs. This approach is based on preliminary analyses of the logistic regression-based method that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used raw annual spawner abundances within the estimation routines for aggregate abundance-based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in status related to independent cohorts within a generation. 
