a few initial comments on ch3 and 4 of CS WP

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -41,9 +41,9 @@ knitr::include_graphics("figure/coho-map.png")
 
 Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and associated sub-populations. Note that the definition of these sub-populations, including mapped boundaries, are provided in @ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006.
 
-While hatchery enhancement has occurred, and continues to occur, throughout the Interior Fraser Coho SMU, most CUs are currently considered integrated-wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., with Proportionate Natural Influence (PNI) values most likely > 0.72; M. Arbeider, pers comm). Integrated-wild populations are ones in which most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement prior between 1998 and 2005, so would likely have been considered an integrated-transition population during this period; however, hatchery enhancement has been lower since 2006.   
+While hatchery enhancement has occurred, and continues to occur throughout the Interior Fraser Coho SMU, most CUs are currently considered integrated-wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., with Proportionate Natural Influence (PNI) values most likely > 0.72; M. Arbeider, pers comm). Integrated-wild populations are ones in which most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement prior between 1998 and 2005, so would likely have been considered an integrated-transition population during this period; however, hatchery enhancement has been lower since 2006.   
 
-Interior Fraser Coho is being included in the first batch of major stocks proposed for regulation under the Fish Stock Provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
+Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock Provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, bacth 1 stocks will be prescribed .... -->
 
 ### Previous assessments
@@ -59,7 +59,12 @@ Interior Fraser Coho show a strong positive relationship between their spatial d
 
 ### Similarity Among CUs
 
-We considered the 4 criteria identified in Holt *et al.* (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) habitat capacity.  
+We considered the 4 criteria identified in Holt *et al.* (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) habitat capacity <!--CH: I've changed this last criteria to 'population capacity', as it's really about capacity parameter of the SR relationship, which can sometimes be inferred from freswater habitat-->.  
+<!--CH addition: "Although statuses are avilable for all CUs in this SMU, in sensitivity anlayses we removed individual CUs from LRP estimation and status assessments. Evaluation against these four criteria can inform the extent to which we would expect status against LRPs to be sensitive to omission of CUs.-->
+
+
+<!--CH: This section on threats is very thorough. I wonder if it could be condensed to: "The dominant threats to this SMU are from forestry, forest fires, agriculture, and urban and rural development, including threats from effluents from agriculture and forestry and from linear development (i.e., the straightening and channelization of streams associated with agriculture and urban / rural development) [ @arbeiderInteriorFraserCoho2020]. While impacts from a given activity may be higher in some CUs that others, the interconnected threats stemming from any one activity, as well as cumulative impacts, mean that it is hard to isolate one CUs that experiences threats differently than another.  Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development."  --> 
+<!--CH: If threats from ER are low, perhpas leave them out.-->
 
 In an assessment of threats for Interior Fraser Coho completed as part of the 2018 Recovery Potential Assessment, @arbeiderInteriorFraserCoho2020 ranked a comprehensive set of threats as on a scale of high, medium, low, and unknown.  The highest ranking threat was modification to catchment surfaces, which was ranked as medium-high.  Examples of threats within this category included the removal of forest and vegetation and the creation of impervious surfaces resulting in modified hydrological regimes, while activities contributing to the modification of catchment surfaces included forestry, forest fires, agriculture, and urban and rural development.  The threat of effluents from agriculture and forestry, as well as the threat of linear development (i.e., the straightening and channelization of streams associated with agriculture and urban / rural development), were also ranked relatively high at medium risk. Forestry, agriculture, and linear development are widespread throughout the interior Fraser River watershed, with all CUs impacted by one or more of these [@arbeiderInteriorFraserCoho2020]. The Fraser Canyon, South Thompson, and Lower Thompson CUs have experienced the highest historic and ongoing forestry impacts, however, the Middle Fraser CU has had increased forestry in recent years due to pine beetle infestations. The three Thompson River CUs (North, South, and Lower Thompson) are most impacted by agricultural activities [@arbeiderInteriorFraserCoho2020], while linear development impacts are highest within the Middle Fraser and North Thompson CUs.  Development pressures linked to recreational use impact habitats within the South Thompson CU [@arbeiderInteriorFraserCoho2020]. Thus, while impacts from a given activity may be higher in some CUs that others, all CUs are vulnerable to these threats from one activity or another.  The interconnected threats stemming from any one activity, as well as cumulative impacts, mean that it is hard to isolate one CUs that experiences threats differently than another.  Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development.
 
@@ -72,15 +77,15 @@ All Interior Fraser Coho CUs have the same predominantly 3-year life history, wi
 Finally, we use the estimated S~REP~, which is the spawner abundance at which the stock replaces itself, from a base Ricker model fit (described below and shown in Appendix \@ref(app:coho-appendix)) to look for differences in habitat capacity among CUs. S~REP~ values ranged from 4023 (Fraser Canyon CU) to 14,595 (North Thompson CU), with S~REP~ values for the other three CUs evenly spaced within this range (Middle Fraser  = 6925, Lower Thompson = 8614, South Thompson = 10,498).  Given that there was no clear outlier in terms of extremely low or extremely high capacity, it is unclear whether these five CUs would respond differently to threats based on habitat capacity alone.
 
 Based on similarities in threats, environmental conditions, life history, and habitat capacity, we found no significant indicators that would prevent us from inferring CU status for one CU from neighboring CUs; especially when data from several other CUs are available to represent the missing CU. We do note however that the Fraser Canyon CU may be the most unique in terms of it having the smallest capacity and a more coastal dominated biogeoclimatic zone, so special consideration may be given to cases in which CU-level data is missing from Fraser Canyon.  
-
+<!--CH: can you add a sentence to the results stating if status against proportion-based or logistic regression-based LRPs were sensitive to the omission of Fraser River Canyon in particular?-->
 
 ## DATA{#cohoData}
 
-Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. Two types of spawner abundance series were provided: total spawners (including fish that originated for hatcheries but returned to spawn, but not including returning fish taken for hatchery brood stock) and natural-origin spawning returns (including only wild-origin fish that returned to spawn, with hatchery brood stock included). The first series, total spawners, was used for stock recuitment modelling so that estimated productivity from all spawners was fully captured, while the second series, natural-origin spawning returns, was used to estimate CU- or SMU-status relative to CU benchmarks and LRPs, respectively. 
+Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm,). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. Two types of spawner abundance series were provided: total spawners (including fish that originated for hatcheries but returned to spawn, but not including returning fish taken for hatchery brood stock) and natural-origin spawning returns (including only wild-origin fish that returned to spawn, with hatchery brood stock included). The first series, total spawners, was used for stock-recruitment modelling so that estimated productivity from all spawners was fully captured, while the second series, natural-origin spawning returns, was used to estimate CU- or SMU-status relative to CU benchmarks and LRPs, respectively. 
 
-Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020; brood years 2014-2016), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate the proportion of recruits at age (M. Arbeider, pers. comm). 
+Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020; brood years 2014-2016), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate the proportion of recruits at age (M. Arbeider, pers. comm.). 
 
-The exploitation rate time series is a large source of uncertainty for Interior Fraser Coho. Exploitation rates are only available at the SMU-level, so are assumed constant among all CUs, which is unlikely to be true. Furthermore, models used to reconstruct exploitation rates require a large number of assumptions that are expected to be incorrect [@arbeiderInteriorFraserCoho2020]. Because exploitation rate time series are used to reconstruct spawner-recruit time series, errors in exploitation rates will propagate through to estimates of stock recruitment parameters, relative abundance-based benchmarks such as S\textsubscript{gen}, and covaration in recruitment residuals. Additional sources of uncertainty in Interior Fraser Coho data sets include observation errors in spawner abundance estimates and estimates of age-at-maturity. Spawner abundance estimates are largely derived from visual surveys, for which observer efficiency is difficult to accurately estimate. Scale sampling to determine age structure is incomplete at the CU-level with small sample sizes, missing data, and limited spatial representation within CUs in some years [@kormanEvaluationFrameworkAssessing2019]
+The exploitation rate time series is a large source of uncertainty for Interior Fraser Coho. Exploitation rates are only available at the SMU-level, so are assumed constant among all CUs, which is unlikely to be true. Furthermore, models used to reconstruct exploitation rates require a large number of assumptions that are expected to be incorrect [@arbeiderInteriorFraserCoho2020]. Because exploitation rate time series are used to reconstruct spawner-recruit time series, errors in exploitation rates will propagate through to estimates of stock recruitment parameters, relative abundance-based benchmarks such as S\textsubscript{gen}, and covaration in recruitment residuals. Additional sources of uncertainty in Interior Fraser Coho data sets include observation errors in spawner abundance estimates and estimates of age-at-maturity. Spawner abundance estimates are largely derived from visual surveys, for which observer efficiency is difficult to accurately estimate. Scale sampling to determine age structure is incomplete at the CU-level with small sample sizes, missing data, and limited spatial representation within CUs in some years [@kormanEvaluationFrameworkAssessing2019].
 
 
 
