--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -128,8 +128,8 @@ csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for in
 ```
 
 ### Spawner Abundances
-Spawner abundances were provided for 20 WCVI indicators stocks, (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Area Staff for local and international assessment and management (e.g., @dfoWCVISalmonBulletin2021). Missing values were not infilled. In future work, infilled time-series of indicators within inlets (or CUs) could be developed to extend the available time-series. 
-
+Spawner abundances were provided for 20 WCVI indicators stocks, (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Area Staff for local and international assessment and management (e.g., @dfoWCVISalmonBulletin2021). Missing values were not infilled. In future work, infilled time-series of indicators within inlets (or CUs) could be developed to extend the available time-series. <!--CH: checking these next 2 sentences with Jessy and Diana M.--> Spawner abundances for indicators stocks were estimated based on a combination of enumeration at fishways, mark recapture experiments, and stream walks, which range in accuracy and precision. Although indicator stocks are chosen in part based on the consistency of the methods applied, spawner estimates from visual surveys is a source of uncertainty for this SMU.
+<!--CH: not sure Which estimation methods are typically used? Area under the curve, peak counts, etc.? -->
 
 ```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by indicator stock, in units of 1000s. Dark blue time-series are indicator stocks with Proportionate Natural Index (PNI) values <= 0.5; light blue time-series are indicator stocks with PNI < 0.5, i.e., are highly enhanced. Prelminary PNI values are provided in the top right corner of each panel where they are available",  warning=FALSE, echo=FALSE, fig.align="center"}
 
@@ -140,15 +140,16 @@ knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
 
 ### Proportionate Natural Influence, PNI
 
-Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and < 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series were < 0.5. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery, was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced, Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program.
+Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and < 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series were < 0.5. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery, was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced, Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program. Uncertainties in PNI values stem from low sample sizes to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners, and assumptions required to estimate proportion natural-origin brood stock. 
 
 
-Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the collection of data to estimate the contribution of hatchery-origin spawners to total production for these indicator stocks.
+Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the collection of data to estimate the contribution of hatchery-origin spawners to total production for these indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU.
 
 <!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  
 
 CH: my initial thinking would be remove time-periods where PNI is very high from analyses. This is similar to approach of FR sockeye, where they removed historical periods of high hatchery enhancement in SR time-series. However, I think we could probably leave this as a recommendation that should come from SEP. For IFR, I think starting the data in 1998 removes most/all of those problems?
 -->
+
 
 
 ## INLET AND CU STATUS ESTIMATION
