--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -187,7 +187,10 @@ Ricker $a$ values were approximated for WCVI Chinook from a life-stage model tha
 
 Our approach to estimating S~MSY~ (and S~gen~) differed from that of @parkenHabitatbasedMethodsEstimate2006, because we derived productivity independently from the life-stage specific models, whereas @parkenHabitatbasedMethodsEstimate2006 estimated both S~MSY~ and S~REP~ from the watershed-area model thereby inferring mean estimates of productivity, $a$. Those estimates of productivity which were deemed unrealistically high for WCVI Chinook, necessitating the life-stage modelling approach. 
 
-Bootstrapped confidence intervals in  S~gen~ (Equation \@ref(eq:Sgen)) were estimated by repeated sampling of the normal distributions of S~REP~ and $\log(a)$, with standard deviations in log(S~REP~) derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks. <!--CH: we used 95%CI of SREP to approximate the Bayesian posteriors for SREP (and resulting uncertainty in Sgen). We recommend performing Bayesian estimation in the future to facilitate integration of uncertainties from various sources. --> 
+
+Approximate confidence intervals in  S~gen~ (Equation \@ref(eq:Sgen)) were estimated by repeated sampling of the normal distributions of S~REP~ and $\log(a)$, with standard deviations in log(S~REP~) derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks. In future analyses we recommend Bayesian estimation of habitat-based benchmarks to facilitate integration of uncertainties from various sources. <!--CH: Catarina, does this last sentence (and the rest of the pgh) make sense. Please revise as you see fit. -->  
+<!--CH note: I change "bootstrapped CIs" to "approximate CIs,... calculated from repeated sampling"
+<!--CH notes: we used 95%CI of SREP to approximate the Bayesian posteriors for SREP (and resulting uncertainty in Sgen) --> 
 
 
 <!--CH: if there is time, I'd love help to make this table prettier-->
@@ -216,7 +219,7 @@ bench <- bench %>% dplyr::filter(Stock != "Cypre"&
   
 
 bench <- bench %>% dplyr::select(c("Stock or inlet", Sgen, Sgen.lwr, Sgen.upr, SREP, SREP.lwr, SREP.upr))
-csasdown::csas_table(bench, booktabs = T, caption = "Benchmarks and boostrapped 95% confidence intervals (labelled, lwr and upr) for five inlets, including only indicator stocks that are not highly enhanced.") %>% kableExtra::row_spec(20, hline_after=TRUE)
+csasdown::csas_table(bench, booktabs = T, caption = "Benchmarks and approximate 95% confidence intervals (labelled, lwr and upr) for five inlets, including only indicator stocks that are not highly enhanced.") %>% kableExtra::row_spec(20, hline_after=TRUE)
 
 
 ```
