add weir footnote

--- a/caseStudyWP/appendix-samSim.Rmd
+++ b/caseStudyWP/appendix-samSim.Rmd
@@ -20,9 +20,9 @@ Updated functionality for the LRP version of samSim include:
 
 * The option to initialize population dynamics for individual CUs at unfished equilibrium when no historical recruitment data are available. While this option would not be appropriate for projections aimed at estimating recovery from a current state, it can be used to estimate projection-based LRPs because we are only interested in the underlying relationship between aggregate abundance and the probability individual CUs will be above their lower benchmark.
 
-* The option to include a log-normal bias-correction factor of $-\sigma^2 / 2$ to recruitment projected using one of the two available Ricker stock recruit models. This option was added to accommodate cases in which samSim is parameterized using stock recruitment parameters that have been corrected for log-normal bias to represent expected (mean) parameters. The log-nomral bias correction is commonly applied in stock recruit modelling because the expected value of *e*^$\sigma$ is *e*^$\sigma^2 / 2$} rather than zero when recruitment deviations are normally distributed (@coxCandidateLimitReference2019, @ohlbergerBayesianLifecycleModel2019, @olmosEvidenceSpatialCoherence2019, @forrestAssessmentPacificCod2020, Weir et al., (in press)). When input parameters have been corrected for this log-normal bias, the bias correction must also be added to projections.  We use a log-normal bias correction factor for all of our case study analyses.
+* The option to include a log-normal bias-correction factor of $-\sigma^2 / 2$ to recruitment projected using one of the two available Ricker stock recruit models. This option was added to accommodate cases in which samSim is parameterized using stock recruitment parameters that have been corrected for log-normal bias to represent expected (mean) parameters. The log-nomral bias correction is commonly applied in stock recruit modelling because the expected value of *e*^$\sigma$ is *e*^$\sigma^2 / 2$} rather than zero when recruitment deviations are normally distributed (@coxCandidateLimitReference2019, @ohlbergerBayesianLifecycleModel2019, @olmosEvidenceSpatialCoherence2019, @forrestAssessmentPacificCod2020, ^[Weir, L.,*et al.* (in press). Recovery Potential Assessment for 11 Designatable Units of Chinook Salmon, Oncorhynchus tshawytscha, Part 2: Elements 12 to 22. DFO Can. Sci. Advis. Sec. Res. Doc.  viii + 126 p.]. When input parameters have been corrected for this log-normal bias, the bias correction must also be added to projections.  We use a log-normal bias correction factor for all of our case study analyses.
 
-<!--CH: need footnote for Weir et al. (in press)-->
+<!--CH: need footnote for Weir et al. (in press) , CW added-->
 
 * Specification of variability in exploitation rates as a function of both variability among years and variability among CUs.
 
